src/css/metacatui-common.css
/* ... */
#Metadata table .copy{
	min-width: 50px;
}
#Content.no-stylesheet.container{
	width: 86%;
}
#Content.no-stylesheet.container > .breadcrumb{
	width: 100%;
	margin-top: 20px;
}
#Content.no-stylesheet > .breadcrumb~.citation{
	margin-top: 20px;
}

.attributeList > .row-fluid > .span2 {
  min-width: 130px;
  max-width: 150px;
  max-width: calc(165px - 2.127659574468085%);
  max-height: 700px;
  overflow-y: scroll;
}
.tab-content,
.row-fluid .tab-content.span10{
	width: 76%;
	width: calc(100% - 165px);
}
.attributeList a{
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: nowrap;
	max-width: 100%;
}
.controls-well > .party{
	margin-bottom: 30px;
	border-bottom: 1px solid #DDD;
}
/* ---- Taxonomic range ---- */
.taxonomicCoverage .control-group{
   	margin-bottom: 20px;
    width: auto;
}
.taxonomicCoverage > .control-group{
    margin-left: 180px;
}
.taxonomicCoverage .control-label{
    width: auto;
    padding: 0px 10px;
}
.taxonomicCoverage .controls > .control-group:nth-child(2n){
    margin-left: 107px;
}
.taxonomicCoverage .control-label{
   color: #999;
}
.taxonomicCoverage .controls {
	margin-left: 0px;
}
/**----------------------------------------**/
.metadata-view .citation{
	margin-bottom: 20px;
	display: inline-block;
	font-size: 1.2em;
	line-height: 1.5em;
}
.citation-container + .data-source{
  max-width: 125px;
  display: inline-block;
  float: right;
  margin-bottom: 10px;
}
.metadata-controls-container .info-icons{
	display: inline-block;
	padding-left: 20px;
	font-size: 1.2em;
	top: 5px;
    position: relative;
}
.metadata-controls-container{
	position: relative;
}
/* .metadata-controls-container>.copy-success{
	position: absolute;
    top: -24px;
    left: 17px;
    font-size: .9em;
} */
.citation-container ~ .data-source .ORNLDAAC,
.citation-container ~ .data-source .CDL,
.citation-container ~ .data-source .PISCO,
.citation-container ~ .data-source .ONEShare,
.citation-container ~ .data-source .KUBI,
.citation-container ~ .data-source .CLOEBIRD,
.citation-container ~ .data-source .EDACGSTORE,
.citation-container ~ .data-source .NKN{
	max-width: 175px;
}
.citation-container ~ .data-source .KNB,
.citation-container ~ .data-source .LTER{
	max-height: 90px;
}


/******************************************
* Metrics Controller Styling
********************************************/
/* Style for the metric button */




/***********
Defult button styling for Metrics views
***********/
a.btn.metrics {
    display: inline-block;
    width: 164px;
    padding-right: 0px;
    margin-top: -14px;
    margin-left: -5px;
}
.metric-value.badge {
    float: right;
    background-color: #1C6E84;
    margin-top: 2px;
}
.metric-icon {
    margin-right: 10px;
    float: left;
}
.metric-name {
    float: left;
}
.metric-value {
    float: right;
}




i.icon.icon-cloud-download {
    font-size: 1.2em; !important;
}
i.icon.icon-eye-open {
    font-size: 1.2em; !important;
}
.btn-group+.btn-group, .btn-toolbar>.btn+.btn,
.btn-toolbar>.btn+.btn-group, .btn-toolbar>.btn-group+.btn {
    margin-left: 15px;
}

i.icon.metric-icon.icon-spinner.icon-spin {
    margin-top: 2px;
    margin-right: 15px;
}

/* Style for the toolbars that contains buttons in the well on either side. */
.metric-toolbar {
    float: left;
    width: auto;
}
.edit-toolbar {
    border-left: 1px solid #E3E3E3;
    float: right;
    margin-top: -15px;
    width: auto;
    height: 50px;

}

.edit-toolbar >
#metadata-controls-container >
.metadata-controls-container {
    margin-left: 15px;
    margin-top: 10px;
    margin-right: -10px;
    width: auto;
    height: 38px;
    display: inline-block;
    position: relative;
}

.edit-toolbar >
#owner-controls-container >
.authority-controls {
    width: auto;
    height: 38px;
    margin-top: -38px;
    margin-right: -20px;
    margin-left: 170px;
}

.edit-toolbar >
#owner-controls-container >
.authority-controls >
#editMetadata {
    margin-right: 15px;
}

/* .edit-toolbar >
#metadata-controls-container.controls >
.metadata-controls-container >
.copy-success{
	position: absolute;
    top: -24px;
    left: 17px;
    font-size: .9em;
} */


/* Making the publish button consistent size as the downloads all*/
.edit-toolbar >
#owner-controls-container >
.authority-controls >
#publish {
    width: 138px;
}

a.btn.metrics:hover .metric-value.badge {
    float: right;
    color: #1C6E84;
    background-color: #FFFFFF;
}
a.btn.metrics:hover, a.btn.metrics:click {
    color: #888888;
    background-color: #FFFFFF;
    border-color: #C3C3C3;
}

#metric-modal {
    z-index: 1050;
    top: 15%;
    width: 930px;
    height: 500px;
    left: 40%;
}
#metric-modal .modal-content {
    width: auto;

}

#metric-modal .modal-header {
    width: 900px;
    height: 25px;
}

#metric-modal .modal-body {
    width: 100%;
    height: 400px;
    max-height: 400px;
    padding: 0px;
}

#metric-modal .modal-footer {
    width: 900px;
    height: 25px;
	padding-top: 18px;
}

#metric-modal .modal-header .icon {
	padding: 0px 9px;
}

#metric-modal .modal-header .left-header-section {
	float: left;
	width: 90%;
	margin-top: 3px;
}

#metric-modal .modal-header .right-header-section {
	float: right;
	width: 10%;
}

#metric-modal .modal-body .modal-description {
	float: left;
	width: 236px;
	padding-left: 30px;
	padding-top: 33px;
}

#metric-modal .modal-body .modal-description p {
	margin: 0 0 25px;
}

#metric-modal .modal-body .modal-description p#slider-instructions {
	margin-top: 109px;
	margin-bottom: 0;
}

#metric-modal .modal-body .metric-chart {
	float: right;
	width: 600px;
	padding-right: 18px;
	padding-top: 22px;
}

/******************************************
* Metric Modal Chart (Views, Downloads, Citations)
********************************************/


#metric-modal .metric-chart text {
	fill: #565656;
	font-size: 9px;
	font-family: Helvetica, Arial, "sans serif";
}

#metric-modal .metric-chart rect.plot-background{
	fill: white;
}
/* ... */

